<resources>
    <string name="app_name">Hackathon17</string>
    <string name="save">save</string>
    <string name="add_new_product">Add New Product</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="choose_image">Choose Image</string>
    <string name="tags">Tags</string>
    <string name="tag_name">Tag Name</string>
    <string name="image_product">Image Product</string>
    <string name="list_of_products">List of Products</string>
    <string name="price">Price</string>
    <string name="result">Result</string>
    <string name="specification">Specification</string>
    <string name="type">Type</string>
    <string name="material">Material</string>
    <string name="sizes">Sizes</string>
    <string name="add_product_size">Add Product Size Variant</string>
    <string name="size_name">Size Name</string>
    <string name="product_size">Product Size</string>
    <string name="waist">Waist</string>
    <string name="add_size">Add Size</string>
    <string name="chest">Chest</string>
    <string name="neck">Neck</string>
    <string name="score">score</string>
    <string name="please_complete_product_information">Please complete your product information</string>
    <string name="empty_field">Empty Field</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
</resources>