<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.input.InputProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            style="@style/Text.Regular"
            android:text="@string/image_product"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Text.Regular"
            android:id="@+id/btn_choose_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:text="@string/choose_image" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_image"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/bg_input"
            android:layout_margin="10dp"
            android:visibility="gone"/>

        <TextView
            style="@style/Text.Regular"
            android:text="@string/title"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:inputType="textCapWords"/>

        <TextView
            style="@style/Text.Regular"
            android:text="@string/price"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:inputType="numberDecimal"/>

        <TextView
            style="@style/Text.Regular"
            android:id="@+id/warning_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            style="@style/Text.Regular"
            android:text="@string/description"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:inputType="textLongMessage"/>

        <TextView
            style="@style/Text.Regular"
            android:text="@string/specification"
            android:layout_marginTop="10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/type"
                style="@style/Text.Regular"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:text="@string/type"
                app:layout_constraintEnd_toStartOf="@+id/material"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/material"
                style="@style/Text.Regular"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:text="@string/material"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/type"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/bg_input"
                android:inputType="textLongMessage"
                android:padding="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/et_material"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_material"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/bg_input"
                android:inputType="textLongMessage"
                android:padding="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/et_type"
                app:layout_constraintTop_toBottomOf="@+id/material" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/Text.Regular"
            android:text="@string/sizes"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Text.Regular"
            android:id="@+id/btn_add_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:text="@string/add_product_size" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_sizes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_size"/>
        </FrameLayout>

        <TextView
            style="@style/Text.Regular"
            android:text="@string/tags"
            android:layout_marginTop="10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_add_tag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_add_tag"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_button"
                android:src="@drawable/ic_baseline_add_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_tag"/>
        </FrameLayout>

        <Button
            style="@style/Button"
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save"
            android:layout_marginVertical="20dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>