<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:elevation="20dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_product"
                android:scaleType="centerCrop"
                android:src="@color/primaryDark" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginHorizontal="16dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_price"
                style="@style/Text.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="6dp"
                android:text="@string/price"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/card_scoring"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_scoring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/purple_500"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="4dp"

                android:layout_marginHorizontal="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp">

                    <TextView
                        android:id="@+id/tv_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/score"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_baseline_star_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specification"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginHorizontal="16dp"/>

        <FrameLayout
            android:id="@+id/frame_order_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/transparant"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_marginTop="8dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/tr_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Text.Regular"
                        android:layout_width="wrap_content"
                        android:text="@string/type" />

                    <TextView
                        style="@style/Text.Regular"
                        android:layout_width="20dp"
                        android:gravity="center"
                        android:text=":" />

                    <TextView
                        android:id="@+id/tv_type"
                        style="@style/Text.Regular" />
                </TableRow>

                <TableRow
                    android:id="@+id/tr_material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Text.Regular"
                        android:layout_width="wrap_content"
                        android:text="@string/material" />

                    <TextView
                        style="@style/Text.Regular"
                        android:layout_width="20dp"
                        android:gravity="center"
                        android:text=":" />

                    <TextView
                        android:id="@+id/tv_material"
                        style="@style/Text.Regular" />
                </TableRow>

            </TableLayout>
        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sizes"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginHorizontal="16dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_sizes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_detail_size"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            style="@style/Text.Regular"
            android:id="@+id/tv_desc"
            android:text="@string/description"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginHorizontal="16dp"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>